--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "npm install && react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "npm install && react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
